# ibtikar-chatbot

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scraped_data.json
core/: __init__.py
crud/: __init__.py
endpoints/: __init__.py
models/: __init__.py
schemas/: __init__.py
scrapper/: .env.example  STRUCTURE_GUIDE.md  UPSTASH_FIX_SUMMARY.md  __init__.py  main.py  main_new.py  pyproject.toml  requirements-core.txt  run.py  test_basic.py  test_structure.py  test_upstash_fix.py
scrapper/alembic/: __init__.py
scrapper/alembic/versions/: 001_create_initial_tables.py
scrapper/core/: config.py  database.py  deps.py  exceptions.py  logging.py
scrapper/crud/: __init__.py  base.py  document.py
scrapper/data/: README.md
scrapper/docs/: README.md
scrapper/endpoints/: __init__.py  health.py  scraping.py  search.py
scrapper/models/: __init__.py  base.py  document.py  vector_index.py
scrapper/schemas/: __init__.py  api.py
scrapper/services/: __init__.py
scrapper/services/data_processing/: data_cleaner.py  data_cleaner_enhanced.py
scrapper/services/embeddings/: bge_client.py
scrapper/services/storage/: __init__.py
scrapper/services/vector_store/: __init__.py  faiss_store.py  upstash_store.py
scrapper/services/web_scraper/: scraper.py
services/data_processing/: __init__.py
services/storage/: cloud_storage.py  local_storage.py
services/vector_store/: __init__.py  upstash_store.py  vector_store_handler.py
services/web_scraper/: __init__.py  scraper.py
